# Torq

./: .gitignore  CMakeLists.txt  OpenGL  assets.h  glad.c  main.cpp
assets/: object.fs  object.vs  tex_object.fs  tex_object.vs
assets/chunks/: c.-5577450.1017.region  c.0.0.region  c.2554774.1019.region  c.36305816.1017.region  c.47709068.1020.region  c.50954136.1020.region  c.54493080.1023.region
assets/shaders/: basic_light.fs  basic_light.vs  basic_texture.fs  basic_texture.vs  lamp.fs  tex_object.fs
include/: active_chunk.h  assets.h  block_utility.h  chunk.h  chunk_loader.h  chunk_management.h  chunk_mesh.h  chunk_renderer.h  chunk_utility.h  material.h  mesh.h  model.h  precision.h  resource.h  shader.h  texture.h  texture_hash.h  texture_utility.h  thread_pool.h  thread_safe_queue.h  torq_utility.h  vertex.h  worldgen.hpp
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glm/: CMakeLists.txt
lib/noise/: CMakeLists.txt
lib/noise/include/: Noise.hpp
lib/noise/src/: Noise.cpp
lib/stb_image/: CMakeLists.txt
notes/: notes_colors.md  notes_drawing.md  notes_transformations.md
src/: generate_data.cpp
src/IO/: camera.cpp  camera.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  screen.cpp  screen.h
src/graphics/: mesh.cpp  model.cpp  shader.cpp  texture.cpp
src/graphics/models/: cube.cpp  cube.h  lamp.cpp  lamp.h  sphere.cpp  sphere.h
src/resources/: active_chunk.cpp  chunk_loader.cpp  chunk_management.cpp  chunk_mesh.cpp  chunk_renderer.cpp  resource.cpp  resource.h  thread_pool.cpp
src/worldgen/: worldgen.cpp
